--- a/src/pages/styles/Homepage.css
+++ b/src/pages/styles/Homepage.css
@@ -27,23 +27,25 @@
     align-items: center;
 }
 
-.hero-text {
+.hero-text-LightTheme{
     font-size: calc(3vw + 3vh + 3vmin);
     backdrop-filter: blur(3px);
     border-radius: 33px;
     font-weight: bold;
     padding: 33px;
-}
-
-/* .hero-text LightTheme{
     text-shadow: 2px 2px 4px rgba(200, 200, 200, 0.5);
     background: rgba(0, 0, 0, 0.15);
-} */
+}
 
-/* .hero-text DarkTheme{
+.hero-text-DarkTheme{
+    font-size: calc(3vw + 3vh + 3vmin);
+    backdrop-filter: blur(3px);
+    border-radius: 33px;
+    font-weight: bold;
+    padding: 33px;
     text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.5);
     background: rgba(255, 255, 255, 0.15);
-} */
+}
 
 #ad1 {
     grid-row: 3;
