--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ html {
     font-family: 'Aileron', Arial, Helvetica, sans-serif;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .App.DarkTheme {
     background-color: black;
     color:white;
