--- a/src/pages/styles/Homepage.css
+++ b/src/pages/styles/Homepage.css
@@ -154,8 +154,6 @@
 #footer {
     grid-row: 6;
     grid-column: 1 / span 3;
-    bottom: 0;
-    max-height: fit-content;
 }
 
 .LightTheme #footer{
@@ -188,7 +186,10 @@
         grid-row: 3;
         grid-column: 2;
         align-items: center;
-        margin: 0;
+        margin-top: 6vw;
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: -6vw;
     }
 
     #redirect-reading,
