--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,7 +1,7 @@
 footer {
     display: flex;
     justify-content: space-between;
-    height: 4vw;
+    max-height: 6vw;
 }
 
 footer .authorship,
@@ -11,12 +11,12 @@ footer .social-media,
 footer .newsletter,
 footer .privacy,
 footer .about {
-    margin-left: 2vw;
-    margin-right: 2vw;
+    margin: 1em;
 }
 
 footer a {
     text-decoration: none;
+    color: black;
 }
 
 footer form {
@@ -26,26 +26,14 @@ footer form {
 
 footer input[type="email"],
 footer input[type="text"] {
-    margin-right: 0.5vw;
-    margin-left: 0.5vw;
+    margin-right: 0.5em;
+    margin-left: 0.5em;
     border-radius: 33px;
 }
 
-.social-media {
+.social-media a {
     display: flex;
     justify-content: space-between;
-}
-
-.social-media a {
-    display: inline-block;
-    margin-right: 2vw;
-    color: black;
-}
-
-.contact a,
-.privacy a,
-.about a {
-    color: black;
 }
 
 #email::placeholder {
@@ -54,4 +42,21 @@ footer input[type="text"] {
 
 .authorship {
     font-size: small;
+}
+
+@media (max-width: 995px) {
+    footer {
+        flex-direction: column;
+        align-items: center;
+        max-height: 100%;
+    }
+
+    .social-media {
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .social-media a {
+        margin: 0.5em;
+    }
 }
