--- a/src/pages/styles/Homepage.css
+++ b/src/pages/styles/Homepage.css
@@ -1,262 +1,169 @@
-.homepage {
-    display: grid;
+
+/* Homepage */
+.homepage-DarkTheme,
+.homepage-LightTheme {
     grid-template-rows: minmax(0.25fr, auto) minmax(2fr, auto) minmax(20fr, auto) minmax(0.25fr, auto);
     grid-template-columns: 2fr 4fr 2fr;
+    display: grid;
     gap: 3vh;
 }
 
-.logo {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 2vw;
-    height: 2vw;
-    border-radius: 33px;
-    cursor: pointer;
-}
-
-#topside {
+/* Navbar */
+.navbar {
+    grid-column: 2;
     grid-row: 1;
-    grid-column: 2;
-    top: 0;
 }
 
-#hero-section {
-    grid-row: 2;
-    grid-column: 1 / span 3;
-    padding: 35vh 0;
+/* Hero section */
+.LightTheme .hero-section,
+.DarkTheme .hero-section {
     background-image: url('../../assets/library.jpg');
-    background-size: cover;
-    background-position: bottom;
     background-repeat: no-repeat;
-    display: flex;
+    background-position: bottom;
+    grid-column: 1 / span 3;
     justify-content: center;
+    background-size: cover;
     align-items: center;
-}
-
-.hero-text-DarkTheme{
-    text-shadow: 2px 2px 4px rgba(200, 200, 200, 0.5);
-    background: rgba(0, 0, 0, 0.15);
-    font-size: calc(3vw + 3vh + 3vmin);
-    backdrop-filter: blur(3px);
-    border-radius: 33px;
-    font-weight: bold;
-    padding: 33px;
-    text-align: center;
-    flex-wrap: wrap;
-    overflow: hidden;
-}
-
-.hero-text-LightTheme{
-    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.5);
-    background: rgba(255, 255, 255, 0.15);
-    font-size: calc(3vw + 3vh + 3vmin);
-    backdrop-filter: blur(3px);
-    border-radius: 33px;
-    font-weight: bold;
-    padding: 33px;
-    text-align: center;
-    flex-wrap: wrap;
-    overflow: hidden;
-}
-
-#ad1 {
-    grid-row: 3;
-    grid-column: 2;
-    align-self: center;
-    background-color: yellow;
-    padding: 1vh 0;
-    text-align: center;
-}
-
-#ad2 {
-    grid-row: 5;
-    grid-column: 2;
-    align-self: center;
-    background-color: yellow;
-    padding: 1vh 0;
-    text-align: center;
-}
-
-#main-content {
-    grid-row: 4;
-    grid-column: 1/-1;
+    padding: 35vh 0;
     display: flex;
-    flex-direction: column;
-    overflow: scroll;
-    overflow-x: hidden;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-    margin-left: 3vw;
-    margin-right: 3vw;
+    grid-row: 2;
 }
-    
-#main-content::-webkit-scrollbar {
+
+.LightTheme .hero-text,
+.DarkTheme .hero-text {
+    text-shadow: 2px 2px 4px rgba(50, 50, 50, 0.5);
+    font-size: calc(3vw + 3vh + 3vmin);
+    backdrop-filter: blur(3px);
+    border-radius: 33px;
+    text-align: center;
+    font-weight: bold;
+    overflow: hidden;
+    flex-wrap: wrap;
+    padding: 33px;
+}
+
+.LightTheme .hero-text {
+    text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.15);
+}
+
+.DarkTheme .hero-text {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.15);
+}
+
+/* Ad section */
+.ad1,
+.ad2 {
+    background-color: yellow;
+    align-self: center;
+    text-align: center;
+    grid-column: 2;
+    padding: 1vh 0;
+}
+
+.ad1 {
+    grid-row: 3;
+}
+
+.ad2 {
+    grid-row: 5;
+}
+
+/* Body */
+.body-homepage {
+    -ms-overflow-style: none;
+    flex-direction: column;
+    scrollbar-width: none;
+    overflow-x: hidden;
+    grid-column: 1/-1;
+    margin-right: 3vw;
+    overflow: scroll;
+    margin-left: 3vw;
+    display: flex;
+    grid-row: 4;
+}
+
+.body-homepage::-webkit-scrollbar {
     display: none;
 }
 
-#redirect-reading,
-#redirect-events,
-#redirect-about{
+/* Sections inside body */
+.redirect-reading,
+.redirect-events,
+.redirect-about {
+    border-radius: 33px;
+    margin-bottom: 3vw;
     display: flex;
-    background-color: rgb(155, 155, 155, 0.3);
-    margin-bottom: 9vw;
-    border-radius: 33px;
 }
 
-#redirect-reading .image,
-#redirect-events .image2,
-#redirect-about .image3 {
-    width: 50%;
+.redirect-reading .image,
+.redirect-events .image2,
+.redirect-about .image3 {
+    border: 3px solid #a46646;
+    border-radius: 33px;
+    cursor: pointer;
     height: 99%;
-    border: 3px solid #C46316;
-    border-radius: 33px;
-    cursor:pointer;
-    
+    width: 50%;
 }
 
-#redirect-reading .image {
+.redirect-reading .image {
     margin-right: 3vw;
     order: 1;
 }
 
-#redirect-events .image2 {
+.redirect-events .image2 {
     margin-left: 3vw;
     order: 4;
 }
 
-#redirect-about .image3 {
+.redirect-about .image3 {
     margin-right: 3vw;
     order: 5;
 }
 
-#redirect-reading .text-container {
+.LightTheme .redirect-reading,
+.LightTheme .redirect-events,
+.LightTheme .redirect-about {
+    background-color: rgba(134, 134, 134, 0.5);
+}
+
+.DarkTheme .redirect-reading,
+.DarkTheme.redirect-events,
+.DarkTheme.redirect-about {
+    background-color: rgba(222, 222, 222, 0.5);
+}
+
+.redirect-reading .text-container,
+.redirect-events .text-container2,
+.redirect-about .text-container3 {
+    margin-top: 3vw;
+}
+
+.redirect-reading .text-container {
+    margin-right: 3vw;
     order: 2;
-    margin-top: 3vw;
-    margin-right: 3vw;
 }
 
-#redirect-events .text-container2 {
-    order: 3;
+.redirect-events .text-container2 {
     margin-left: 3vw;
-    margin-top: 3vw;  
+    order: 3;
 }
 
-#redirect-about .text-container3 {
-    order: 6;
-    margin-top: 3vw;
+.redirect-about .text-container3 {
     margin-right: 3vw;
+    order: 6;
 }
 
-.DarkTheme img {
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+.DarkTheme img{
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
 }
 
 .LightTheme img {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-#footer {
-    grid-row: 6;
-    grid-column: 1 / span 3;
-}
-
-.LightTheme #footer{
-    background-color: rgb(155, 155, 155, 0.3) !important;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3) !important;
-}
-
-.DarkTheme #footer{
-    background-color: rgb(155, 155, 155, 0.3) !important;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5) !important;
-}
-
-@media (max-width: 1440px) {
-    #ad1,
-    #ad2 {
-        grid-row: 3;
-    }
-
-    #ad1 {
-        grid-column: 1;
-    }
-
-    #ad2 {
-        grid-column: 3;
-    }
-
-    #main-content {
-        grid-row: 3;
-        grid-column: 2;
-        align-items: center;
-        margin-top: 6vw;
-        margin-left: 0;
-        margin-right: 0;
-        margin-bottom: -6vw;
-    }
-
-    #redirect-reading,
-    #redirect-events,
-    #redirect-about {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #redirect-reading .image, 
-    #redirect-events .image2, 
-    #redirect-about .image3 {
-        order: 0;
-        margin: 0;
-    }
-
-    #redirect-reading .text-container,
-    #redirect-events .text-container2,
-    #redirect-about .text-container3 {
-        margin-right: 1.5vw;
-        margin-left: 1.5vw;
-        order: 1;
-    }
-}
-
-@media (max-width: 500px) {
-    #topside {
-        grid-column: 1/-1;
-    }
-
-    #ad1 {
-        grid-row: 3;
-    }
-        
-    #ad2 {
-        grid-row: 5;
-    }
-
-    #ad1,#ad2 {
-        grid-column: 2;
-    }
-        
-    #main-content {
-        grid-row: 4;
-        grid-column: 1/-1;
-        align-items: center;
-        margin: 0;
-    }
-
-    .hero-text-DarkTheme {
-        text-shadow: 2px 2px 6px rgba(200, 200, 200, 1);
-        background: rgba(0, 0, 0, 0.15);
-        font-size: calc(2vw + 2vh + 2vmin);
-        backdrop-filter: blur(2px);
-    }
-    
-    .hero-text-LightTheme {
-        text-shadow: 2px 2px 6px rgba(50, 50, 50, 1);
-        background: rgba(255, 255, 255, 0.3);
-        font-size: calc(2vw + 2vh + 2vmin);
-        backdrop-filter: blur(2px);
-    }
-}
-
+/* Fade in effect for sections*/
 .visibility-reading,
 .visibility-events,
 .visibility-about {
@@ -266,4 +173,98 @@
 
 .visible {
     opacity: 1;
+}
+
+/* Footer */
+footer {
+    grid-column: 1 / span 3;
+    grid-row: 6;
+}
+
+/* Tablet query */
+@media (max-width: 1440px) {
+    .ad1,
+    .ad2 {
+        grid-row: 3;
+    }
+
+    .ad1 {
+        grid-column: 1;
+    }
+
+    .ad2 {
+        grid-column: 3;
+    }
+
+    .body {
+        align-items: center;
+        margin-bottom: -6vw;
+        margin-top: 6vw;
+        margin-right: 0;
+        margin-left: 0;
+        grid-column: 2;
+        grid-row: 3; 
+    }
+
+    .redirect-reading,
+    .redirect-events,
+    .redirect-about {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .redirect-reading .image, 
+    .redirect-events .image2, 
+    .redirect-about .image3 {
+        margin-top: 1vw;
+        margin-right: 0;
+        order: 0;
+    }
+
+    .redirect-reading .text-container,
+    .redirect-events .text-container2,
+    .redirect-about .text-container3 {
+        margin: 3vw;
+        order: 1;
+    }
+}
+
+/* Mobile query */
+@media (max-width: 900px) {
+    .navbar {
+        grid-column: 1/-1;
+    }
+
+    .ad1 {
+        grid-row: 3;
+    }
+        
+    .ad2 {
+        grid-row: 5;
+    }
+
+    .ad1,.ad2 {
+        grid-column: 2;
+    }
+        
+    .body {
+        align-items: center;
+        grid-column: 1/-1;
+        grid-row: 4;
+        margin: 0;
+    }
+
+    .hero-text-DarkTheme {
+        text-shadow: 2px 2px 6px rgba(200, 200, 200, 1);
+        font-size: calc(2vw + 2vh + 2vmin);
+        background: rgba(0, 0, 0, 0.15);
+        backdrop-filter: blur(2px);
+    }
+    
+    .hero-text-LightTheme {
+        text-shadow: 2px 2px 6px rgba(50, 50, 50, 1);
+        background: rgba(255, 255, 255, 0.3);
+        font-size: calc(2vw + 2vh + 2vmin);
+        backdrop-filter: blur(2px);
+    }
 }
