--- a/src/components/styles/Slider.css
+++ b/src/components/styles/Slider.css
@@ -1,14 +1,13 @@
 .slider-container {
-    justify-content: space-between;
     align-items: center;
     position: relative;
-    margin-left: 3vw;
-    margin-top: 3vw;
     display: flex;
+    height: 12vw;
 } 
 
 .slider-container p {
     padding: 1.8vw 3vw 0vw 3vw;
+  
 }
 
 .slider {
@@ -21,7 +20,7 @@
     height: 1.5vh;
     outline: none;
     opacity: 0.7;
-    width: 100vw;
+    width: 100%;
 }
 
 .slider:hover {
@@ -52,12 +51,4 @@
     height: 2vw;
     width: 2vw;
     top: 50%;
-}
-
-.slider-container .left {
-    left: -1vw;
-}
-
-.slider-container .right {
-    right: -0.28vw;
 }
